# test-esp32

./: .gitignore  README.md  sdkconfig
main/: CMakeLists.txt  lv_conf.h  lvgl_task.c  lvgl_task.h  main.c  system_info.c  system_info.h  ui_events.h  wifi.c  wifi.h
main/touch_driver/: cst328.c
main/ui/: ui.c  ui.h  ui_control_center.c  ui_control_center.h  ui_wifi.c  ui_wifi.h
main/wifi/: wifi.c  wifi.h
